[package]
name = "wood-survey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
csv = "1.2.2"
regex = "1.9.3"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.17.1"
serde = { version = "1", features = ["derive"] }
tabled = "0.12.2"
tokio = { version = "1", features = ["full"] }
